Fixes about page and logo on mobile

--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -40,8 +40,26 @@
   text-align: center;
   text-decoration: none;
 
-  @media (max-width: 550px) {
-    font-size: 1em;
+
+  @media (max-width: 770px) {
+    display: none;
+  }
+}
+
+.logo--mobile {
+  color: #595959;
+  font-family: 'Yellowtail', cursive;
+  font-size: 3em;
+  text-align: center;
+  text-decoration: none;
+
+
+  @media (min-width: 771px) {
+    display: none;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 2em;
   }
 }
 
